--- a/Frontend/src/components/EmployeesList.module.css
+++ b/Frontend/src/components/EmployeesList.module.css
@@ -23,15 +23,17 @@
   text-decoration: none;
   color: inherit;
   display: flex;
-  /* background-color: var(--color-gray-800); */
-  background-color: var(--color-gray-400);
+  /* background-color: var(--color-gray-200); */
+  background-color: #ffffff4c;
+  background-color: var(--color-primary-400);
   border-radius: 4px;
   overflow: hidden;
 }
 
 .item a:hover {
   transform: scale(1.01);
-  background-color: var(--color-gray-500);
+  /* background-color: var(--color-gray-300); */
+  /* background-color: #ffffff9c; */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -40,6 +42,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  font-weight: 600;
 }
 .item h2 {
   margin: 0 0 1rem 0;
@@ -49,7 +52,7 @@
 .id {
   padding: 0;
   margin-top: 2px;
-  /* color: rgb(37, 239, 18); */
-  color: rgb(6, 51, 252);
+  color: rgb(231, 28, 106);
+  /* color: var(--color-primary-900); */
   font-size: 1.2em;
 }
