--- a/Frontend/src/components/SearchInput.module.css
+++ b/Frontend/src/components/SearchInput.module.css
@@ -6,7 +6,8 @@
   border-radius: 0;
   border: none;
   background-color: rgb(239, 239, 239);
-  background-color: var(--color-gray-500);
+  background-color: var(--color-gray-200);
+  margin: 0.4rem;
 }
 
 .search select {
